--- a/style.css
+++ b/style.css
@@ -1,43 +1,59 @@
-;
-        height: 100vh;
+/* ESTILO GERAL */
+*{
+
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
     }
-
-
+    
+    html{
+        scroll-behavior: smooth;
+    }
+    
+    body{
+        background-color: #1C1C1C;
+        height: 100vh;
+    
+    }
+    
+    
     .interface {
         max-width: 1200px;
         margin:0 auto;
     }
-
+    
     .flex{
         display: flex;
     }
-
+    
     .EF-contato button {
         margin-top: 5px;
         padding: 20px 40px;
         font-size: 18px;
         font-weight: 600;
-        background-color: #FFF8F0;
-        border: 2px solid #1A1A1A; /* Adiciona uma borda preta */
+        background-color: #ffffff;
+        border: 2px solid #000000; /* Adiciona uma borda preta */
         border-radius: 30px;
         cursor: pointer;
         transition: all 0.2s; /* Transição para todos os efeitos */
     }
-
-    h2.titulo span{
-        color: #3B6C4D;
-    }
-
+        
+        h2.titulo span{
+            color: #093a09;
+        }
+    
      button:hover, form .btn-enviar input:hover{
-        box-shadow: 0px 0px 8px #3B6C4D;
-        transform: scale(1.05);
-    }    
-
+            box-shadow: 0px 0px 8px #093a09;
+            transform: scale(1.05);
+        }    
+    
     /* ESTILO DO CABEÇALHO */
     .header{
         padding: 40px 4%;
     }
-
+    
+    
     header .logo img {
         margin-top: 20px;
         margin-left: 20px;
@@ -45,39 +61,41 @@
         height: auto;
         border-radius: 30px; 
     }
-
+    
+    
     header .interface{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        
     }
-
+    
     header a{
-        color: #F2D4D6;
+        color: #a5a3a1ef;
         text-decoration: none;
         display: inline-block;
         transition: .2s;
     }
     header nav.menu-desktop a:hover {
-        color: #3B6C4D;
+        color: #093a09;
         transform: scale(1.05);
         font-weight: bold; /* Adiciona negrito */
-        text-shadow: 0 0 5px #3B6C4D; /* Adiciona brilho cor marrom */
+        text-shadow: 0 0 5px #093a09; /* Adiciona brilho cor marrom */
     }
     header nav ul{
         list-style-type: none;
         font-size: 20px;
     }
-
+    
     header nav.menu-desktop ul li{
         display: inline-block;
         padding: 0 40px;
     }
-
+    
     /* ESTILO DO MENU MOBILE */
-
+    
     .btn-abrir-menu i{
-        color: #3B6C4D;
+        color: #093a09;
         font-size:40px;
         padding: 20px;
     }
@@ -92,19 +110,19 @@
         overflow: hidden;
         transition:  .5s;
     }
-
+    
     .menu-mobile.abrir-menu{
         width: 70%;
     }
-
+    
     .menu-mobile.abrir-menu ~ .overlay-menu{
         display: block;
     }
-
+    
     .menu-mobile nav ul{
         text-align: right;
     }
-
+    
     .menu-mobile nav ul li a{
         color: #fff;
         font-size: 20px;
@@ -112,21 +130,21 @@
         padding: 40px 8%;
         display: block;
     }
-
+    
     .menu-mobile nav ul li a:hover{
-        background-color: #3B6C4D;
-        color: #1A1A1A;
+        background-color: #093a09;
+        color: #000;
     }
-
+    
     .menu-mobile .btn-fechar{
         padding: 20px 5%;
     }
-
+    
     .menu-mobile .btn-fechar i {
-        color: #3B6C4D;
+        color: #093a09;
         font-size: 30px;
     }
-
+    
     .overlay-menu{
         background-color: #00000091;
         width: 100%;
@@ -137,151 +155,161 @@
         z-index: 88888;
         display: none;
     }
-
+    
     /* ESTILO TOPO DO SITE */
     section.topo-do-site{
         padding: 40px 4%;
     }
-
+    
     section.topo-do-site .flex{
         align-items: center;
         justify-content: center;
         gap: 90px;
     }
-
+    
     .topo-do-site h1 {
-        color: #1A1A1A;
+        color: #000000; /* Define a cor do texto como branco */
         font-size: 42px;
         line-height: 40px;
+        
     }
-
+    
+    
     .topo-do-site h1 span {
-        color: #8C1C13;
+        color: #093a09; /* Define a cor do texto como preto */
+        
     }
-
+    
+    
     .topo-do-site .txt-topo-site p {
-        color: #1A1A1A;
+    
+        color: #000000;
         margin: 40px 0;
     }
-
+    
     .topo-do-site .img-topo-site img{
         position: relative;
         width: 300px;
         height: auto;
         border-radius: 40px; 
         animation: flutuar 2s ease-in-out infinite alternate;
+        
+        
     }
-
-    @keyframes flutuar {
-        0%{
-            top:0;
+    
+        @keyframes flutuar {
+            0%{
+                top:0;
+            }
+            100%{
+                top: 30px;
+            }
         }
-        100%{
-            top: 30px;
-        }
-    }
-
+    
     h2.titulo{
-        color: #FFF8F0;
+        color: #fff;
         font-size: 38px;
         text-align: center;
+        
     }
-
-    /* ESTILOS DAS ESPECIALIDADES */
+    
+    
+        /* ESTILOS DAS ESPECIALIDADES */
     section.especialidades{
-        padding: 40px 4%;
+    padding: 40px 4%;
     }
-
+    
     section.especialidades .flex{
         gap: 60px;
     }
-
+    
     .especialidades .especialidades-box{
         font-size: 20px;
-        color: #1A1A1A;
+        color: #000000;
         border-radius: 10px ;
         margin-top: 45px;
         transition: .2s;
     }
     .especialidades .especialidades-box:hover{
         transform: scale(1.02);
-        box-shadow: 0 0 2px #FFF8F060;
+        box-shadow: 0 0 2px #ffffff60;
     }
-
+    
     .especialidades .especialidades-box i{
         font-size: 55px;
-        color: #3B6C4D;
+        color: #093a09;
     }
-
+    
     .especialidades .especialidades-box h3{
-        font-size: 28px;
-        margin: 10px 0;
-        text-align: justify;
+    font-size: 28px;
+    margin: 10px 0;
+    text-align: justify;
     }
-
+    
     /* ESTILO DO SOBRE */
     section.sobre{
         padding: 40px 4%;
     }
-
+    
     section.sobre .flex{
         align-items: center;
         gap: 60px;
     }
-
+    
     .sobre  {
-        color: #FFF8F0;
+        color: #ffffff; /* Define a cor do texto como branco */
+        
     }
 
     .txt-sobre {
-        color: #FFF8F0;
+        color: #ffffff; /* Define a cor do texto como branco */
     }
-
+    
     .sobre .txt-sobre h2{
         font-size: 40px;
         line-height: 40px;
         margin-bottom: 30px;
     }
-
+    
     .sobre .txt-sobre h2 span{
-        color: #3B6C4D;
-        display: block;
+    color: #093a09;
+    display: block;
     }
-
+    
     .sobre .txt-sobre p{
         margin: 20px;
         text-align: justify;
     }
-
+    
     .sobre .txt-sobre .btn-social button{
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        border: none;
-        color: #3B6C4D;
-        background-color: #FFF8F0;
-        font-size: 30px;
-        cursor: pointer;
-        margin: 8px;
-        transition: .2s;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    color: #093a09;
+    background-color: #ffffff;
+    font-size: 30px;
+    cursor: pointer;
+    margin: 8px;
+    transition: .2s;
     }
-
+    
     /* ESTILO PORTFOLIO */
-
+    
     section.portfolio{ 
         padding: 80px 4%;
-        box-shadow: 0 0 40px 10px #FFF8F01C;
+        box-shadow: 0 0 40px 10px #ffffff1c;
     }
-
+    
     section.portfolio .flex{
         justify-content: space-around;
         margin-top: 60px;
     }
-
+    
     .img-port{
         width: 360px;
         height: 460px;
-        background-color: #8C1C13;
+        background-color: #093a09;
         background-size: cover;
         background-position: 100% 0%;
         transition: 8s;
@@ -292,34 +320,34 @@
     .img-port:hover{
         background-position: 100% 100%;
     }
-
+    
     .overlay{
         position: absolute;
         top: 0;
         left: 0;
         width:100% ;
         height: 100%;
-        background-color: #000000A1;
+        background-color: #000000a1;
         border-radius: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
         font-size: 24px;
         font-weight: 600;
-        color: #FFF8F0;
+        color: #fff;
         opacity: 1;
         transition: .5s;
     }
-
+    
     .overlay:hover{
         opacity: 0;
     }
-
+    
     /* ESTILO FORMULARIO */
     section.formulario{
         padding: 80px 4%;
     }
-
+    
     form {
         max-width: 500px;
         margin: 0 auto;
@@ -329,93 +357,96 @@
         gap: 10px;
         margin-top: 40px;
     }
-
+    
+    
     form input, textarea{
+        
         width: 100%;
-        background-color: #1A1A1A;
+        background-color: #242424;
         border: 0;
         outline: 0;
         padding: 20px 15px;
         border-radius: 15px;
-        color: #FFF8F0;
+        color: #fff;
         font-size: 18px;
     }
-
+    
     form input::placeholder{
-        color: #3B6C4D;
+        color: #093a09;
     }
-
+    
     form textarea{
         resize: none;
         max-height: 600px;
     }
-
+    
     form .btn-enviar{
         margin-top: 40px;
         text-align: center;
     }
-
+    
     form .btn-enviar input{
         width: 120px;
-        background-color: #3B6C4D;
-        color: #FFF8F0;
+        background-color: #093a09;
+        color: #ffffff;
         font-weight: 700;
         cursor: pointer;
         transition: .2s;
     }
-
+    
     /* ESTILO DO RODAPÉ */
-
+    
     footer{
         padding: 40px 4%;
-        box-shadow: 0 0 40px 10px #F2D4D6;
+        box-shadow: 0 0 40px 10px #ffffffa2;
     }
-
+    
     footer .flex{
         justify-content: space-between;
     }
-
+    
     footer .line-footer{
         padding: 20px 0;
     }
-
+    
     .borda{
-        border-top: 2px solid #3B6C4D;
+        border-top: 2px solid #093a09;
     }
-
+    
     footer .line-footer p i{
-        color: #3B6C4D;
+        color: #093a09;
         font-size: 22px;
     }
-
+    
     footer .line-footer p a{
-        color:#FFF8F0 ;
+        color:#fff ;
         font-size: 15px;
     }
-
+    
     footer .btn-social button{
         width: 20px;
         height: 20px;
         border-radius: 50%;
         border: none;
-        color: #3B6C4D;
-        background-color: #FFF8F0;
+        color: #093a09;
+        background-color: #ffffff;
         font-size: 20px;
         cursor: pointer;
         margin: 8px;
         transition: .2s;
-    }
-
+        }
+    
+    
     @media screen and (max-width: 1200px){
-        /* classe geral */
+    /* classe geral */
         .flex{
             flex-direction: column-reverse;
         }
-
+    
         .topo-do-site .flex{
             flex-direction: column-reverse;
         }
-        /* CABEÇALHO */
+    /* CABEÇALHO */
         .menu-desktop, .EF-contato{
             display: none;
         }
@@ -429,21 +460,24 @@
     h2.titulo{
         font-size: 34px;
         line-height:30px ;
+    
     }
     section.topo-do-site{
         padding: 20px 8%;
     }
     .topo-do-site h1{
+    
         font-size: 30px;
     }
+    
     .topo-do-site .img-topo-site img{
         width: 100%;
     }
-
-    /* ESTILOS DAS ESPECIALIDADES */
+    
+     /* ESTILOS DAS ESPECIALIDADES */
     section.especialidades{
-        padding: 40px 8%;
-    }
+         padding: 40px 8%;
+            }
     /* ESTILO DO SOBRE */
     section.sobre{
         padding: 80px 8%;
@@ -453,33 +487,33 @@
         line-height: 35px;
         text-align: center;
     }
-
+    
     .btn-social{
         text-align: center;
     }
-
+    
     /* PORTFOLIO */
     section.portfolio{ 
         padding: 80px 8%;
     }
-
+    
     .img-port{
         width: 100%;
         max-width: 360px;
         margin: 0 auto;
     }
-
+    
     section.portfolio .flex{
         gap: 60px;
     }
-
+    
     .img-port {
         width: 100%;
         max-width: 360px;
         margin: 0 auto;
         animation: scrollImage 10s linear infinite;
     }
-
+    
     @keyframes scrollImage {
         0% {
             background-position: 0% 0%;
@@ -488,7 +522,7 @@
             background-position: 0% 100%;
         }
     }
-
+    
 .menu-desktop, .EF-contato, .titulo, .img-topo-site, .btn-abrir-menu, .menu-mobile, .txt-topo-site, .especialidades, .interface, .titulo, .flex, .especialidades-box, .sobre, .portfolio, .formulario, .interface {
     visibility:hidden;
 }
