--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     }
     
     body{
-        background-color: #1C1C1C;
+        background-color:#FAF6F0;
         height: 100vh;
     
     }
@@ -32,8 +32,8 @@
         padding: 20px 40px;
         font-size: 18px;
         font-weight: 600;
-        background-color: #ffffff;
-        border: 2px solid #000000; /* Adiciona uma borda preta */
+        background-color: #B11E3A;
+        border: 2px solid #D4AF37; /* Adiciona uma borda preta */
         border-radius: 30px;
         cursor: pointer;
         transition: all 0.2s; /* Transição para todos os efeitos */
@@ -44,7 +44,7 @@
         }
     
      button:hover, form .btn-enviar input:hover{
-            box-shadow: 0px 0px 8px #093a09;
+            box-shadow: 0px 0px 8px #2A2A2A;
             transform: scale(1.05);
         }    
     
@@ -71,16 +71,16 @@
     }
     
     header a{
-        color: #a5a3a1ef;
+        color: #D4AF37;
         text-decoration: none;
         display: inline-block;
         transition: .2s;
     }
     header nav.menu-desktop a:hover {
-        color: #093a09;
+        color: #B11E3A;
         transform: scale(1.05);
         font-weight: bold; /* Adiciona negrito */
-        text-shadow: 0 0 5px #093a09; /* Adiciona brilho cor marrom */
+        text-shadow: 0 0 5px #D4AF37; /* Adiciona brilho cor marrom */
     }
     header nav ul{
         list-style-type: none;
