--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     }
     
     body{
-        background-color:#FAF6F0;
+        background-color:#1C1C1C;
         height: 100vh;
     
     }
@@ -32,19 +32,19 @@
         padding: 20px 40px;
         font-size: 18px;
         font-weight: 600;
-        background-color: #B11E3A;
-        border: 2px solid #D4AF37; /* Adiciona uma borda preta */
+        background-color: #A8202A;
+        border: 2px solid #B68900; /* Adiciona uma borda preta */
         border-radius: 30px;
         cursor: pointer;
         transition: all 0.2s; /* Transição para todos os efeitos */
     }
         
         h2.titulo span{
-            color: #093a09;
+            color: #EAEAEA;
         }
     
      button:hover, form .btn-enviar input:hover{
-            box-shadow: 0px 0px 8px #2A2A2A;
+            box-shadow: 0px 0px 8px #1D3557;
             transform: scale(1.05);
         }    
     
